--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,33 +7,67 @@ on:
   pull_request:
 
 jobs:
-  build-static:
+
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        arch:
+          - amd64
+          - arm64
     steps:
 
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Build nix
         env:
           DOCKER_BUILDKIT: 1
         run: |
-          docker build --tag nix github.com/NixOS/docker
+          docker build \
+              --platform linux/${{ matrix.arch }} \
+              --tag nix \
+              github.com/NixOS/docker
 
       - name: Build
         env:
           DOCKER_BUILDKIT: 1
         run: |
           docker build . \
+              --platform linux/${{ matrix.arch }} \
               --target local \
               --output type=local,dest=.; \
-          tar -czf crun.tar.gz bin share
+          tar -czf crun-${{ matrix.arch }}.tar.gz bin share
+
+      - name: Store tarball
+        uses: actions/upload-artifact@v3
+        with:
+          name: crun-${{ matrix.arch }}.tar.gz
+          path: crun-${{ matrix.arch }}.tar.gz
+
+  release:
+    if: github.event_name != 'pull_request'
+    needs:
+    - build
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v2
+    
+      - uses: actions/download-artifact@v3  
 
       - name: Get version
         id: get_version
-        if: github.event_name != 'pull_request'
         run: |
-          echo "::set-output name=version::$(./bin/crun --version | grep "crun version" | cut -d' ' -f3)"
+          version="$(cat Dockerfile | grep "ARG CRUN_VERSION=" | sed -E 's/ARG CRUN_VERSION=//')"
+          echo "::set-output name=version::${version}"
 
       - name: Create release
         id: create_release
@@ -48,4 +82,4 @@ jobs:
           omitBody: true
           prerelease: false
           replacesArtifacts: true
-          artifacts: "crun.tar.gz"
+          artifacts: "*/crun-*.tar.gz"
