--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         arch:
           - amd64
-          - arm64
+          #- arm64
     steps:
 
       - name: Checkout
